live test cases added into class

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,100 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserFunctions.setup(java.lang.String)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>19/11/08 16:30:24</td>   <td>17128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyfooterlinks()[pri:7, instance:wanasaTest.HomePageTest@64616ca2]">verifyfooterlinks</td> 
-  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:48</td>   <td>41256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:48</td>   <td>41452</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.closeBrowser1(java.lang.String)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&lt;&lt;closeBrowser1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:37:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserFunctions.setup(java.lang.String)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:37:48</td>   <td>23941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysignup()[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysignup</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:37:59</td>   <td>35167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:37:59</td>   <td>35638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyforgotpassword()[pri:1, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyforgotpassword</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:38:02</td>   <td>38409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:38:02</td>   <td>38451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifylogin()[pri:2, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifylogin</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:38:29</td>   <td>65067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:38:29</td>   <td>65107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifygoogLogin()[pri:3, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifygoogLogin</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:39:29</td>   <td>124858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:39:29</td>   <td>124925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyfooterlinks()[pri:4, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyfooterlinks</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:40:03</td>   <td>159485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:40:03</td>   <td>159586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifypricemovie()[pri:5, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifypricemovie</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:41:17</td>   <td>233443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:41:18</td>   <td>234690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifypriceevent()[pri:6, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifypriceevent</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:41:50</td>   <td>266629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:41:52</td>   <td>267785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifycontactus()[pri:8, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifycontactus</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:42:16</td>   <td>291912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:42:16</td>   <td>291969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifySMiconclick()[pri:9, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifySMiconclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:42:55</td>   <td>331513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:42:55</td>   <td>331558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyplaystoreclick()[pri:10, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyplaystoreclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:43:06</td>   <td>342603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:43:06</td>   <td>342648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyappstoreclick()[pri:11, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyappstoreclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:43:18</td>   <td>354426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:43:18</td>   <td>354469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyuseroperations()[pri:15, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyuseroperations</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:44:17</td>   <td>413743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:44:18</td>   <td>413781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysearchbookingistory()[pri:20, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysearchbookingistory</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:44:30</td>   <td>426260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:44:30</td>   <td>426293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.evouchersFileter()[pri:21, instance:wanasaTest.Wanasalivetest@42d3bd8b]">evouchersFileter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:03</td>   <td>459302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:03</td>   <td>459342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysocialmediaiconclick()[pri:29, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysocialmediaiconclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:24</td>   <td>480176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:24</td>   <td>480218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesLocations()[pri:31, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesLocations</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:57</td>   <td>513179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:57</td>   <td>513217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesGenre()[pri:32, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesGenre</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:18</td>   <td>534515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:18</td>   <td>534555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesLang()[pri:32, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesLang</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:37</td>   <td>553460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:37</td>   <td>553492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.moviesAllFilters()[pri:33, instance:wanasaTest.Wanasalivetest@42d3bd8b]">moviesAllFilters</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:56</td>   <td>571816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:56</td>   <td>571862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.movieTimeingsFilter()[pri:34, instance:wanasaTest.Wanasalivetest@42d3bd8b]">movieTimeingsFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:47:46</td>   <td>622446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:47:46</td>   <td>622487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyfilterTheater()[pri:35, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyfilterTheater</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:48:26</td>   <td>662567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:48:26</td>   <td>662618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyeventTypeFilter()[pri:36, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyeventTypeFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:48:42</td>   <td>678730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:48:43</td>   <td>678760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyeventCatFilter()[pri:37, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyeventCatFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:49:01</td>   <td>697722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:49:02</td>   <td>697807</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.closeBrowser1(java.lang.String)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;closeBrowser1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
 </table>
