--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,100 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:48</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.closeBrowser1(java.lang.String)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&lt;&lt;closeBrowser1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:07</td>   <td>-41452</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserFunctions.setup(java.lang.String)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="ee9593">  <td>19/11/08 16:30:48</td>   <td>-196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.HomePageTest@64616ca2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1355316001</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>19/11/08 16:30:24</td>   <td>-24324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyfooterlinks()[pri:7, instance:wanasaTest.HomePageTest@64616ca2]">verifyfooterlinks</td> 
-  <td>main@1355316001</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:49:02</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.closeBrowser1(java.lang.String)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;closeBrowser1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:44:30</td>   <td>-271514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.evouchersFileter()[pri:21, instance:wanasaTest.Wanasalivetest@42d3bd8b]">evouchersFileter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:57</td>   <td>-184590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesGenre()[pri:32, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesGenre</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:18</td>   <td>-163252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesLang()[pri:32, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesLang</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:24</td>   <td>-217589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.filterMoviesLocations()[pri:31, instance:wanasaTest.Wanasalivetest@42d3bd8b]">filterMoviesLocations</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:56</td>   <td>-125945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.movieTimeingsFilter()[pri:34, instance:wanasaTest.Wanasalivetest@42d3bd8b]">movieTimeingsFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:46:37</td>   <td>-144315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.moviesAllFilters()[pri:33, instance:wanasaTest.Wanasalivetest@42d3bd8b]">moviesAllFilters</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:37:24</td>   <td>-697807</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserFunctions.setup(java.lang.String)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:37:59</td>   <td>-662640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:38:02</td>   <td>-659398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:38:29</td>   <td>-632740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:39:29</td>   <td>-572949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:40:03</td>   <td>-538322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:41:17</td>   <td>-464364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:41:50</td>   <td>-431178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:42:16</td>   <td>-405895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:42:55</td>   <td>-366294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:43:06</td>   <td>-355204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:43:18</td>   <td>-343381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:44:17</td>   <td>-284064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:44:30</td>   <td>-271547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:03</td>   <td>-238505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:24</td>   <td>-217631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:45:57</td>   <td>-184628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:18</td>   <td>-163292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:37</td>   <td>-144347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:46:56</td>   <td>-125991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:47:46</td>   <td>-75361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:48:26</td>   <td>-35240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:48:42</td>   <td>-19077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="9d809a">  <td>19/11/19 12:49:01</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunctions.tearDown(org.testng.ITestResult)[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:42:16</td>   <td>-405838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifySMiconclick()[pri:9, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifySMiconclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:43:06</td>   <td>-355159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyappstoreclick()[pri:11, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyappstoreclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:41:52</td>   <td>-430022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifycontactus()[pri:8, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifycontactus</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:48:43</td>   <td>-19047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyeventCatFilter()[pri:37, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyeventCatFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:48:26</td>   <td>-35189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyeventTypeFilter()[pri:36, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyeventTypeFilter</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:47:46</td>   <td>-75320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyfilterTheater()[pri:35, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyfilterTheater</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:39:29</td>   <td>-572882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyfooterlinks()[pri:4, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyfooterlinks</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:37:59</td>   <td>-662169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyforgotpassword()[pri:1, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyforgotpassword</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:38:29</td>   <td>-632700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifygoogLogin()[pri:3, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifygoogLogin</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:38:02</td>   <td>-659356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifylogin()[pri:2, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifylogin</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:42:55</td>   <td>-366249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyplaystoreclick()[pri:10, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyplaystoreclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:41:18</td>   <td>-463117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifypriceevent()[pri:6, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifypriceevent</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:40:03</td>   <td>-538221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifypricemovie()[pri:5, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifypricemovie</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:44:18</td>   <td>-284026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysearchbookingistory()[pri:20, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysearchbookingistory</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:37:48</td>   <td>-673866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysignup()[pri:0, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysignup</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:45:03</td>   <td>-238465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifysocialmediaiconclick()[pri:29, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifysocialmediaiconclick</td> 
+  <td>main@546718765</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/11/19 12:43:18</td>   <td>-343338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wanasalivetest.verifyuseroperations()[pri:15, instance:wanasaTest.Wanasalivetest@42d3bd8b]">verifyuseroperations</td> 
+  <td>main@546718765</td>   <td></td> </tr>
 </table>
